AER-858 don't abuse the farmland code for the type.  (#144)
* refactor to use visitor pattern
* throw exception when FarmEmissionFactorType is not valid for StandardFarmlandActivity while calculating emissions.
* get the emission factor type from the emissionFactorSupplier since it is not user data. Also add test for PER_ANIMAL_PER_YEAR